feat auto attributes on element list without id and refactor

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lsxpath",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "list xpath recursive with simple filter",
   "main": "index.js",
   "scripts": {
@@ -19,11 +19,13 @@
   "homepage": "https://github.com/r22n/lsxpath#readme",
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.19",
+    "@types/node": "^20.11.25",
     "ts-jest": "^29.1.2",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "varcom.js": "^1.0.2",
+    "xml-escape": "^1.1.0",
     "xml-js": "^1.6.11"
   }
 }
